--- a/src/pages/jackpotPage/jackpotPage.module.css
+++ b/src/pages/jackpotPage/jackpotPage.module.css
@@ -1,3 +1,60 @@
 .JackpotPage {
-  border: 1px solid black;
+  width: 100%;
+  height: 100dvh;
+  background: url("./../../assets/yellow-bg.jpg") center / cover no-repeat;
+  justify-content: flex-start !important;
+
+  .jackpotWrapper {
+    border: 1px solid orangered;
+    width: 100%;
+    height: calc(100dvh - 32vh);
+    position: relative;
+    align-items: flex-start !important;
+    .jackpotImgContainer {
+      border: 1px solid green;
+      height: 55vh;
+    }
+    .jackpotLeaver {
+      /* border: 1px solid black; */
+      position: absolute;
+      height: 10vh;
+      top: 30%;
+      right: 3%;
+      transition: transform 0.5s ease;
+      transform: rotateX(0deg);
+    }
+
+    .leaverPulled {
+      transform-style: preserve-3d;
+      animation: rotate 2s linear infinite alternate-reverse;
+      transform: rotateX(50deg);
+    }
+    .jackpotContainer {
+      /* border: 1px solid black; */
+      position: absolute;
+      top: 37.8%;
+      gap: 2vh;
+      .singleIcon {
+        border: 2px solid transparent;
+        overflow: hidden;
+        width: 7vh;
+        height: 9.5vh;
+        aspect-ratio: 1;
+        .imgContainer {
+          /* border: 2px solid red; */
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
+
+/* @keyframes rotate {
+  from {
+    transform: rotateX(0deg);
+  }
+  to {
+    transform: rotateX(45deg);
+  }
+} */
