--- a/src/pages/spinOnePage/spinOnePage.module.css
+++ b/src/pages/spinOnePage/spinOnePage.module.css
@@ -1,76 +1,77 @@
 .SpinOnePage {
-  border: 1px solid black;
-  width: 100%;
-  height: 100dvh;
-  /* gap: 5vh; */
-
-  .heading{
-    h2{
-      font-size: 10vw;
-    }
-    /* border: 2px solid red; */
-  }
-
-  .wheelWrapper{
-    width: 70%;
-    /* height: auto; */
-    /* height: 70%; */
-    /* justify-content: flex-start !important; */
-    /* border: 2px solid red; */
-    /* justify-content: flex-start !important; */
-    position: relative;
-     gap: 3vh;
-    .spinner{
-      /* border: 3px solid black; */
-      height: 70%;
-      gap: 2vh;
-    .wheelContainer{
-        width: 100%;
-        /* border: 2px solid red; */
-        /* height: auto; */
-        position: relative;
-        /* top: 0vw; */
-        z-index: 2;
-        .wheel{
-            width: 100%;
-            /* height: 100%; */
-            /* border: 10px solid red; */
-            border-radius: 50%;
-            /* animation: rotation 5s ease-in-out; */
-        }
-        .spinPointer{
-            width: 13vw;
-            /* border: 3px solid green; */
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
-        }
-    }
-    .spinnerBase{
-        /* border: 2px solid red; */
-        width: 65%;
-        z-index: 1;
-        position: relative;
-        bottom: 13vw;
-    }
-  }
-  }
-  .buttonDiv{
+    border: 1px solid black;
     width: 100%;
-    height: auto;
-    /* border: 2px solid red; */
-    button{
-      /* width: 39vw; */
-      padding: 2vw 4vw;
-      font-size: 5vw;
-      border-radius: 9vw;
-      background-color: #000;
-      color: #fff;
-      gap: 2vw;
+    height: 100dvh;
+    background: url('../../assets/yellow-bg.jpg');
+    gap: 5vh;
+  
+    .heading{
+      h2{
+        font-size: 10vw;
+      }
+      /* border: 2px solid red; */
+    }
+  
+    .wheelWrapper{
+      width: 70%;
+      height: auto;
+      /* height: 70%; */
+      /* justify-content: flex-start !important; */
+      /* border: 2px solid red; */
+      position: relative;
+       gap: 3vh;
+      .spinner{
+        /* border: 2px solid black; */
+        height: 70%;
+        gap: 2vh;
+      .wheelContainer{
+          width: 100%;
+          /* border: 2px solid red; */
+          /* height: auto; */
+          position: relative;
+          top: 0vw;
+          z-index: 2;
+          .wheel{
+              width: 100%;
+              height: 100%;
+              /* border: 10px solid red; */
+              border-radius: 50%;
+              /* animation: rotation 5s ease-in-out; */
+          }
+          .spinPointer{
+              width: 13vw;
+              /* border: 3px solid green; */
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%,-50%);
+          }
+      }
+      .spinnerBase{
+          /* border: 2px solid red; */
+          width: 80%;
+          z-index: 1;
+          position: relative;
+          bottom: 13vw;
+      }
+    }
+    }
+    .buttonDiv{
+      width: 100%;
+      height: auto;
+      /* border: 2px solid red; */
+      button{
+        /* width: 31vw; */
+        padding: 2vw 4vw;
+        font-size: 5vw;
+        border-radius: 5vw;
+        background-color: #000;
+        color: #fff;
+        gap: 2vw;
+      }
       img{
-      width: 6vw;  
+        width: 6vw;
       }
     }
   }
-}
+  
