--- a/src/pages/homePage/homePage.module.css
+++ b/src/pages/homePage/homePage.module.css
@@ -27,8 +27,18 @@
         right: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(51, 62, 71, 0.7);
+        background-color: rgba(51, 62, 71, 0.8);
         border-radius: 3vw;
+        gap: 1vw;
+        .coin {
+          height: 5vh;
+        }
+        .pointsTxt {
+          font-size: 3vh;
+          font-weight: 600;
+          color: #fff;
+          margin-bottom: 0.5vh;
+        }
       }
     }
   }
