--- a/src/pages/jackpotPage/jackpotPage.module.css
+++ b/src/pages/jackpotPage/jackpotPage.module.css
@@ -14,24 +14,16 @@
       border: 1px solid green;
       height: 55vh;
     }
-    .jackpotLeaver {
-      /* border: 1px solid black; */
-      position: absolute;
-      height: 10vh;
-      top: 30%;
-      right: 2%;
-      transition: transform 0.5s ease;
-      transform: rotateX(0deg);
-    }
 
-    .leaverPulled {
-      transform-style: preserve-3d;
-      animation: rotate 2s linear infinite alternate-reverse;
-      transform: rotateX(50deg);
+    .jackpotLeaver {
+      border: 1px solid black;
+      position: absolute;
+      top: 5%;
+      right: 5%;
     }
 
     .jackpotContainer {
-      /* border: 1px solid black; */
+      border: 1px solid black;
       position: absolute;
       top: 37.8%;
       gap: 2vh;
@@ -78,7 +70,7 @@
 } */
 
 /* mobile */
-@keyframes cou-bounce {
+/* @keyframes cou-bounce {
   0% {
     transform: translateY(0);
   }
@@ -93,5 +85,52 @@
   }
   100% {
     transform: translateY(-88.3rem);
+  }
+} */
+
+/* for scrren update */
+@keyframes cou-bounce {
+  0% {
+    transform: translateY(0);
+  }
+  70% {
+    transform: translateY(-5340%);
+  }
+  85% {
+    transform: translateY(-5325%);
+  }
+  95% {
+    transform: translateY(-5330%);
+  }
+  100% {
+    transform: translateY(-5326%);
+  }
+}
+
+/* for mobile */
+@media all and (max-width: 480px) {
+  .jackpotLeaver {
+    border: 1px solid black;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+  }
+
+  @keyframes cou-bounce {
+    0% {
+      transform: translateY(0);
+    }
+    70% {
+      transform: translateY(-5470%);
+    }
+    85% {
+      transform: translateY(-5455%);
+    }
+    95% {
+      transform: translateY(-5465%);
+    }
+    100% {
+      transform: translateY(-5460%);
+    }
   }
 }
