--- a/src/pages/jackpotPage/jackpotPage.module.css
+++ b/src/pages/jackpotPage/jackpotPage.module.css
@@ -7,7 +7,6 @@
   .jackpotWrapper {
     border: 1px solid orangered;
     width: 100%;
-    height: calc(100dvh - 32vh);
     position: relative;
     align-items: flex-start !important;
     .jackpotImgContainer {
@@ -16,23 +15,31 @@
     }
 
     .jackpotLeaver {
-      border: 1px solid black;
+      /* border: 1px solid black; */
       position: absolute;
-      top: 5%;
-      right: 5%;
+      top: 28.5%;
+      right: -8.7%;
+      width: 13vh;
+      .spriteSheet {
+        /* border: 1px solid blue; */
+        width: 100%;
+        height: auto;
+      }
     }
 
     .jackpotContainer {
-      border: 1px solid black;
+      /* border: 1px solid black; */
       position: absolute;
-      top: 37.8%;
+      /* top: 37.8%; */
+      top: 46.8%;
       gap: 2vh;
       .singleIcon {
-        border: 2px solid red;
+        /* border: 2px solid red; */
         overflow: hidden;
         /* width: 7vh; */
         width: 12vw;
-        height: 9.2vh;
+        /* height: 9.2vh; */
+        height: 9vh;
         aspect-ratio: 1;
         .imgContainer {
           /* border: 2px solid red; */
