--- a/src/pages/spinOnePage/spinOnePage.module.css
+++ b/src/pages/spinOnePage/spinOnePage.module.css
@@ -2,8 +2,9 @@
   border: 1px solid black;
   width: 100%;
   height: 100dvh;
-  background: url('../../assets/yellow-bg.jpg');
+  background: url('../../assets/yellow-bg.jpg') center / cover no-repeat;
   /* gap: 5vh; */
+  justify-content: flex-start !important;
 
   .wheelWrapper{
     width: 100%;
@@ -25,6 +26,7 @@
       .pointsTxt {
         position: absolute;
         right: 3%;
+        top: 29%;
         color: #fff;
         font-weight: 600;
         font-size: 3vh;
@@ -67,23 +69,15 @@
     }
   }
   }
-  .buttonDiv{
-    width: 100%;
-    height: auto;
-    /* border: 2px solid red; */
-    /* position: absolute;
-    bottom: 0; */
-    button{
-      /* width: 39vw; */
-      padding: 2vw 4vw;
-      font-size: 5vw;
-      border-radius: 9vw;
-      background-color: #000;
-      color: #fff;
+
+    .spinBtn{
+      width: 24vh !important;
       gap: 2vw;
+      padding: 1vh;
       img{
-      width: 6vw;  
+      width: 7vw;  
+      height: auto;
       }
     }
-  }
+  
 }
