--- a/src/pages/homePage/homePage.module.css
+++ b/src/pages/homePage/homePage.module.css
@@ -1,12 +1,12 @@
 .HomePage {
   width: 100%;
   height: 100dvh;
-  background: url("./../../assets/blue-bg.png") center / cover;
+  background: url("./../../assets/dark-bg.png") center / cover;
   justify-content: flex-start !important;
   gap: 4vh;
 
   .mainContainer {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     flex-wrap: wrap;
     gap: 5vw;
     .singleGameContainer {
