--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,5 @@
 .HomeHeader {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   width: 100%;
   gap: 3vh;
   padding: 2vh;
@@ -12,7 +12,7 @@
 }
 
 .GameHeader {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   width: 100%;
   /* height: 32vh; */
   padding: 1vh;
