--- a/src/pages/spinOnePage/spinOnePage.module.css
+++ b/src/pages/spinOnePage/spinOnePage.module.css
@@ -1,21 +1,21 @@
 .SpinOnePage {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 100%;
   height: 100dvh;
-  background: url('../../assets/yellow-bg.jpg') center / cover no-repeat;
+  background: url("../../assets/yellow-bg.jpg") center / cover no-repeat;
   /* gap: 5vh; */
   justify-content: flex-start !important;
 
-  .wheelWrapper{
+  .wheelWrapper {
     width: 100%;
     /* height: auto; */
     /* height: 70%; */
     /* justify-content: flex-start !important; */
-    border: 2px solid red;
+    /* border: 2px solid red; */
     /* justify-content: flex-start !important; */
     position: relative;
-     gap: 3vh;
-     .pointsContainer {
+    gap: 3vh;
+    .pointsContainer {
       /* border: 1px solid red; */
       width: 100%;
       position: relative;
@@ -32,52 +32,51 @@
         font-size: 3vh;
       }
     }
-    .spinner{
+    .spinner {
       /* border: 3px solid black; */
       width: 67%;
       height: 70%;
       gap: 2vh;
-    .wheelContainer{
+      .wheelContainer {
         width: 100%;
         /* border: 2px solid red; */
         /* height: auto; */
         position: relative;
         /* top: 0vw; */
         z-index: 2;
-        .wheel{
-            width: 100%;
-            /* height: 100%; */
-            /* border: 10px solid red; */
-            border-radius: 50%;
-            /* animation: rotation 5s ease-in-out; */
+        .wheel {
+          width: 100%;
+          /* height: 100%; */
+          /* border: 10px solid red; */
+          border-radius: 50%;
+          /* animation: rotation 5s ease-in-out; */
         }
-        .spinPointer{
-            width: 13vw;
-            /* border: 3px solid green; */
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
+        .spinPointer {
+          width: 13vw;
+          /* border: 3px solid green; */
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
         }
-    }
-    .spinnerBase{
+      }
+      .spinnerBase {
         /* border: 2px solid red; */
         width: 65%;
         z-index: 1;
         position: relative;
         bottom: 13vw;
-    }
-  }
-  }
-
-    .spinBtn{
-      width: 24vh !important;
-      gap: 2vw;
-      padding: 1vh;
-      img{
-      width: 7vw;  
-      height: auto;
       }
     }
-  
+  }
+
+  .spinBtn {
+    width: 24vh !important;
+    gap: 2vw;
+    padding: 1vh;
+    img {
+      width: 7vw;
+      height: auto;
+    }
+  }
 }
